[package]
name = "demoloops-web"
version = "0.1.0"
authors = ["Tanner Rogalsky <tanner@tannerrogalsky.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
demoloop = { path = "../demoloops-rs" }

log = "0.4"
wasm-logger = "0.2"
console_error_panic_hook = "0.1"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"